# portofodio

./: .env_example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apps/graffiti/: admin.py  apps.py  models.py  urls.py  views.py
apps/graffiti/migrations/: 0002_remove_graffiti_x_coordinate_and_more.py  0005_alter_graffiti_created.py  0008_graffiti_rotation.py
apps/main/: admin.py  models.py  urls.py  views.py
apps/main/migrations/: 0002_alter_contact_message.py  0007_techlink_name_alter_contact_email_and_more.py  0008_remove_techlink_project_techlink_project.py  0009_remove_techlink_project_project_tech_links.py  0010_alter_techlink_icon.py  0011_alter_techlink_icon.py
apps/youtube/: models.py  urls.py  views.py
graffiti/: admin.py  models.py  urls.py  views.py
graffiti/migrations/: 0001_initial.py  0003_graffiti_color_alter_graffiti_font_and_more.py  0004_graffiti_created_alter_graffiti_font_and_more.py  0006_alter_graffiti_created.py  0007_alter_graffiti_created.py  0009_alter_graffiti_font.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0003_project.py  0004_remove_project_links_link.py  0005_rename_link_techlink_project_link.py  0006_alter_contact_message.py
project/: settings.py  urls.py
static/graffiti/css/: styles.css
static/graffiti/js/: graffiti.js
static/html5/: index.html
static/main/css/: styles.css
static/main/js/: main.js  photo.js
static/youtube/css/: styles.css
static/youtube/js/: youtube.js
templates/: base.html  graffiti.html  main.html  youtube.html  youtube_success.html
